@@ -1,3 +1,7 @@
+2011-02-14  Werner Koch  <wk@g10code.com>
+
+	* benchmark.c: Add option --alignment.
+
 2011-02-01  Werner Koch  <wk@g10code.com>
 
 	* curves.c: New.
